--- a/modules/people/templates/com.googlecode.iterm2.plist.erb
+++ b/modules/people/templates/com.googlecode.iterm2.plist.erb
@@ -1378,7 +1378,7 @@
 			<key>Mouse Reporting</key>
 			<true/>
 			<key>Name</key>
-      <string><%= scope.lookup('boxen_user') %></string>
+      <string><%= scope.lookupvar('boxen_user') %></string>
 			<key>Non Ascii Font</key>
 			<string>MesloLGS-RegularForPowerline 12</string>
 			<key>Non-ASCII Anti Aliased</key>
